--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             color: #ffffff;
             font-size: 5.5rem;
             margin-bottom: 20px;
+            margin-top: 20px;
         }
         .bingo-grid {
             display: grid;
@@ -107,7 +108,6 @@
         .bingo-image {
             width: 25%;
             max-width: 200px;
-            margin-bottom: 10px;
             height: auto;
         }
     </style>
@@ -124,15 +124,15 @@
     </div>
 
     <script>
-        // List of 70 unique words
+        // List of 65 unique words
         const words = [
-            "Taxonomy", "ID Briefing", "AI", "Personalization", "Carbon Footprint", "Media Mix", "Predictive Analytics", "Customer Journey", "Ad Fraud", "GDPR Compliance",
-            "SSP", "Greenwashing", "Campaign Optimization", "Influencer", "Precision", "KPI", "Scorecard", "Data Driven", "Magic", "Brand Safety",
-            "Skincare Suitability", "Support", "Connectivity", "Villain", "Demistify", "Beiersdorf", "Best in Class", "28", "29",
-            "30", "31", "32", "33", "34", "35", "36", "37", "38", "39",
-            "40", "41", "42", "43", "44", "45", "46", "47", "48", "49",
-            "50", "51", "52", "53", "54", "55", "56", "57", "58", "59",
-            "60", "61", "62", "63", "64", "65", "66", "67", "68", "69"
+            "Taxonomy", "ID Briefing", "AI / Artificial Intelligence", "Personalization", "Carbon Footprint", "Media Mix", "Predictive Analytics", "Customer Journey", "Ad Fraud", "GDPR Compliance",
+            "SSP / Supply Side Platform", "Greenwashing", "Campaign Optimization", "Influencer", "Precision", "KPI", "Scorecard", "Data Driven", "Magic", "Brand Safety",
+            "Skincare Suitability", "Support", "Connectivity", "Villain", "Demistify", "Beiersdorf", "Best in Class", "Foundation", "Magic Hat",
+            "Diamond", "Sword", "Crystal Ball", "Tarot Cards", "Magic Potion", "Magic Key", "Scope3", "Impact", "Emissions", "Audience",
+            "Target Group", "Retail Media", "Frequency Capping", "Creative", "Auction", "Real-Time-Bidding", "DSP / Demand-side platform", "Ad Server", "1st Party Data", "2nd Party Data",
+            "3rd Party Data", "CRM / Customer Relationship Management", "Lookalike", "Interest", "Contextual", "Segments", "Performance", "ROAS / Return on Ad Spend", "Efficiency", "Reach & Frequency",
+            "Dashboard", "Data Accuracy", "ROI/Return on Investment", "Automation"
         ];
 
         // Generate a random selection of 20 words for the Bingo card
