--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                 font-size: 0.9rem;
                 padding: 8px 15px;
             }
+            bingo-image {
+            width: 50%;
+            height: auto;
+            }
         }
         .popup {
             display: none;
