--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             .bingo-grid {
                 grid-template-columns: repeat(3, 1fr);
                 gap: 6px;
+                justify-content: center; /* Center the grid items horizontally */
             }
             .bingo-cell {
                 font-size: 0.9rem;
